// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filterDrills > combined: category + favorites + query 1`] = `
[
  "chip_carry_zone",
]
`;

exports[`filterDrills > favorites only 1`] = `
[
  "chip_carry_zone",
]
`;

exports[`filterDrills > filters by category 1`] = `
[
  "chip_carry_zone",
]
`;

exports[`filterDrills > no filters returns all 1`] = `
[
  "range_14_fairways",
  "chip_carry_zone",
]
`;

exports[`filterDrills > search by title (case-insensitive) 1`] = `
[
  "chip_carry_zone",
]
`;
